@@ -3,6 +3,9 @@
 	  pick up the system resolvconf nameservers and hosts there.
 	- included ldns updated (enum warning fixed).
 	- makefile fix for parallel makes.
+	- Patch from Zdenek Vasicek and Attila Nagy for using the source IP
+	  from python scripts.  See pythonmod/examples/resip.py.
+	- doxygen comment fixes.
 
 2 September 2009: Wouter
 	- TRAFFIC keyword for testbound. Simplifies test generation.
